--- a/index.html
+++ b/index.html
@@ -1,18 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Monkey D. Luffy</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <ol>
-        <li><a href="">Pagina 1</a></li>
-        <li><a href="">Pagina 2</a></li>
-        <li><a href="">Pagina 3</a></li>
-    </ol>
-    <img src="img.jpeg" alt="">
-    <h1>Luffy</h1>
-    <p>Monkey D. Luffy es el protagonista del manga y anime One Piece, creado por Eiichiro Oda. Nacido en la aldea Foosha, sueña con convertirse en el Rey de los Piratas. Tras comer la Fruta Gomu Gomu (realmente la Hito Hito: Modelo Nika), obtiene poderes de goma. Luffy funda y lidera los Piratas del Sombrero de Paja, reclutando a una tripulación diversa en su viaje por la Grand Line. Es conocido por su valentía, sentido de la justicia y determinación inquebrantable. Conquista enemigos poderosos y gana aliados gracias a su carisma. Su meta es encontrar el legendario tesoro, el One Piece.</p>
+
+  <nav class="navbar navbar-expand-sm bg-light justify-content-center">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="http://127.0.0.1:5500/pagina1.html">Pagina-1</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="http://127.0.0.1:5500/pagina2.html">Pagina-2</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="http://127.0.0.1:5500/pagina3.html">Pagina-3</a>
+      </li>
+    </ul>
+  </nav>
+
+  <div class="container-fluid mt-5">
+    <div class="text-center">
+      <h2 class="mb-4">Monkey D. Luffy</h2>
+      <img id="luffy" src="imagenes/img.jpeg" class="rounded img-fluid mb-4" alt="Imagen de Luffy" style="max-width: 400px;">
+    </div>
+
+    <div class="text-center mb-4">
+      <img src="imagenes/luffy2.avif" class="rounded img-fluid mb-3" alt="Luffy 2" style="max-width: 400px;">
+      <img src="imagenes/luffy4.webp" class="rounded img-fluid" alt="Luffy 3" style="max-width: 400px;">
+    </div>
+
+    <div class="d-flex justify-content-center">
+      <div class="text-center">
+        <button id="boton" type="button" class="btn btn-danger mb-3" data-bs-toggle="collapse" data-bs-target="#demo">
+          Bibliografía de Monkey D. Luffy
+        </button>
+        <div id="demo" class="collapse">
+          <p class="px-3">
+            Monkey D. Luffy es el protagonista del manga y anime One Piece, creado por Eiichiro Oda. Nacido en la aldea Foosha, sueña con convertirse en el Rey de los Piratas. Tras comer la Fruta Gomu Gomu (realmente la Hito Hito: Modelo Nika), obtiene poderes de goma. Luffy funda y lidera los Piratas del Sombrero de Paja, reclutando a una tripulación diversa en su viaje por la Grand Line. Es conocido por su valentía, sentido de la justicia y determinación inquebrantable. Conquista enemigos poderosos y gana aliados gracias a su carisma. Su meta es encontrar el legendario tesoro, el One Piece.
+          </p>
+          <p class="px-3">
+            A lo largo de su viaje, Luffy ha enfrentado a enemigos como Crocodile, Doflamingo, y Kaido, demostrando un crecimiento impresionante tanto en fuerza como en liderazgo. Su habilidad para despertar el Gear Fifth lo convierte en uno de los personajes más poderosos del mundo de One Piece.
+          </p>
+          <p class="px-3">
+            Además de su fuerza, Luffy es muy querido por su personalidad alegre, inocente y determinada. Siempre está dispuesto a arriesgar su vida por sus amigos y tiene un fuerte sentido de la libertad, que es el núcleo de su sueño como pirata.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
