--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Monkey D. Luffy</title>
+  <link rel="stylesheet" href="styles.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
@@ -11,13 +12,16 @@
   <nav class="navbar navbar-expand-sm bg-light justify-content-center">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="http://127.0.0.1:5500/pagina1.html">Pagina-1</a>
+        <a class="nav-link active" href="index.html">Inicio</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="http://127.0.0.1:5500/pagina2.html">Pagina-2</a>
+        <a class="nav-link" href="pagina1.html">Pagina-1</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="http://127.0.0.1:5500/pagina3.html">Pagina-3</a>
+        <a class="nav-link" href="pagina2.html">Pagina-2</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="pagina3.html">Pagina-3</a>
       </li>
     </ul>
   </nav>
