--- a/pagina1.html
+++ b/pagina1.html
@@ -12,7 +12,10 @@
   <nav class="navbar navbar-expand-sm bg-light justify-content-center">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="http://127.0.0.1:5500/index.html">Inicio</a>
+        <a class="nav-link" href="index.html">Inicio</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active" href="pagina1.html" >Pagina-1</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="pagina2.html">Pagina-2</a>
