--- a/pagina2.html
+++ b/pagina2.html
@@ -12,10 +12,13 @@
   <nav class="navbar navbar-expand-sm bg-light justify-content-center">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="http://127.0.0.1:5500/index.html">Inicio</a>
+        <a class="nav-link" href="index.html">Inicio</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="http://127.0.0.1:5500/pagina1.html">Pagina-1</a>
+        <a class="nav-link" href="pagina1.html">Pagina-1</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active" href="pagina2.html" >Pagina-2</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="pagina3.html">Pagina-3</a>
