--- a/pagina3.html
+++ b/pagina3.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Peleas Épicas</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="pagina3.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
@@ -38,9 +38,11 @@
         <div class="card h-100">
           <img src="imagenes/katakuri.jpg" class="card-img-top" alt="">
           <div class="card-body">
+            <div class="rojo">
             <h5 class="card-title">Luffy vs Katakuri</h5>
             <p class="card-text">Una pelea llena de respeto, esfuerzo y evolución del Haki de observación.</p>
             <p>Épico: 95%</p>
+          </div>
             <div class="progress">
               <div class="progress-bar bg-danger" style="width: 95%"></div>
             </div>
@@ -52,9 +54,11 @@
         <div class="card h-100">
           <img src="imagenes/luffyvslucci.jpg" class="card-img-top" alt="">
           <div class="card-body">
+            <div class="amarillo">
             <h5 class="card-title">Luffy vs Rob Lucci</h5>
             <p class="card-text">Una pelea emocional por salvar a Robin. El "Jet Gatling" fue legendario.</p>
             <p>Épico: 90%</p>
+            </div>
             <div class="progress">
               <div class="progress-bar bg-warning" style="width: 90%"></div>
             </div>
@@ -66,9 +70,11 @@
         <div class="card h-100">
           <img src="imagenes/luffyvskaido.webp" class="card-img-top" alt="">
           <div class="card-body">
+            <div class="verde">
             <h5 class="card-title">Luffy vs Kaido</h5>
             <p class="card-text">El despertar de Luffy, Gear 5 y el combate contra un emperador. Puro fuego.</p>
             <p>Épico: 100%</p>
+            </div>
             <div class="progress">
               <div class="progress-bar bg-success" style="width: 100%"></div>
             </div>
